--- a/google-maps/maps-example.css
+++ b/google-maps/maps-example.css
@@ -9,8 +9,27 @@ body {
   height: 400px; 
 }
 
-div.info {
-  width: 50%;
+div.hidden {
+  display: none;
+}
+
+div#info {
+  width: 80%;
+}
+
+div#info:after {
+  content: "";
+  height: 0;
+  clear: both;
+}
+
+div.controls {
+  width: 20%;
+  float: left;
+}
+
+div.panel {
+  width: 40%;
   float: left;
 }
 
@@ -29,4 +48,17 @@ div#legend img {
   height: 16px;
   vertical-align: middle;
   margin: 5px;
+}
+
+input {
+  margin-bottom: 5px;
+}
+
+input[type=text] {
+  width: 20px;
+}
+
+label {
+  width: 150px;
+  display: inline-block;
 }
