--- a/jquery-carousel/WebContent/style/carousel.css
+++ b/jquery-carousel/WebContent/style/carousel.css
@@ -4,6 +4,8 @@ body {
   color: SlateGray;
 }
 
+/* Carousel */
+
 div#carousel {
   width: 810px;
   overflow: hidden;
@@ -39,6 +41,8 @@ div#container input:focus {
   outline:none;
 }
 
+/* Pills */
+
 div#pills {
   width: 200px;
   margin: 0 360px;
@@ -57,4 +61,32 @@ span.active {
 
 span.inactive {
   background-image: url(../images/pill.png);
+}
+
+/* Photo frame pop-up */
+
+div#fullSizeFrame {
+  position: relative;
+  top: -100px;
+  left: 30px;
+  width: 830px;
+  padding: 20px 0px 20px 20px;
+  border-radius: 8px;
+  border: 1px solid SlateGray;
+  box-shadow: 5px 5px 5px LightGray;
+  z-index: 1000;
+  display: none;
+}
+
+img#fullSizePhoto {
+  border: 1px solid SlateGray;
+  float: left;
+}
+
+input#fullSizeClose {
+  float: left;
+}
+
+input#fullSizeClose:focus {
+  outline: none;
 }
